          annoyances)
        - Update Schema::Versioned to respect hashref style of
          connection_info
        - Do not recreate the same related object twice during MultiCreate
          (solves the problem of orphaned IC::FS files)
        - Fully qualify xp_msver selector when using DBD::Sybase with
          MSSQL (RT#57467)

    * Misc
        - Add a warning to load_namespaces if a class in ResultSet/
          is not a subclass of DBIx::Class::ResultSet
        - All DBIC exception-handling switched to Try::Tiny
        - Depend on optimized SQL::Abstract (faster SQL generation)

0.08121 2010-04-11 18:43:00 (UTC)
        - Support for Firebird RDBMS with DBD::InterBase and ODBC
        - Add core support for INSERT RETURNING (for storages that
          supports this syntax, currently PostgreSQL and Firebird)
        - Fix spurious warnings on multiple UTF8Columns component loads
        - DBIx::Class::UTF8Columns entered deprecated state
        - DBIx::Class::InflateColumn::File entered deprecated state
        - DBIx::Class::Optional::Dependencies left experimental state
        - Add req_group_list to Opt::Deps (RT#55211)
        - Add support for mysql-specific STRAIGHT_JOIN (RT#55579)
        - Cascading delete/update are now wrapped in a transaction
          for atomicity
        - Fix accidental autovivification of ENV vars
        - Fix update_all and delete_all to be wrapped in a transaction
        - Fix multiple deficiencies when using MultiCreate with
          data-encoder components (e.g. ::EncodedColumn)
        - Fix regression where SQL files with comments were not
          handled properly by ::Schema::Versioned.
        - Fix regression on not properly throwing when $obj->relationship
          is unresolvable
        - Fix the join-optimiser to consider unqualified column names
          whenever possible
        - Fix an issue with multiple same-table joins confusing the join
          optimizier